--- a/.env.local
+++ b/.env.local
@@ -12,11 +12,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=192.168.2.6
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=facility_dev
-DB_USERNAME=facility_u
-DB_PASSWORD=X2LW@MtL*hC
+DB_DATABASE=tx_nguyenhung
+DB_USERNAME=root
+DB_PASSWORD=root
 
 VITE_APP_NAME="${APP_NAME}"
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
@@ -28,7 +28,7 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=luyenit.nguyen@gmail.com
+MAIL_USERNAME=hungln00@gmail.com
 MAIL_PASSWORD=osbrqalvispmhohi
 MAIL_ENCRYPTION=tls
 MAIL_FROM_NAME=Facility
