--- a/.env.prod
+++ b/.env.prod
@@ -28,7 +28,7 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=luyenit.nguyen@gmail.com
+MAIL_USERNAME=hungln00@gmail.com
 MAIL_PASSWORD=osbrqalvispmhohi
 MAIL_ENCRYPTION=tls
 MAIL_FROM_NAME=Facility
